[package]
name = "deserialize"
version = "0.1.0"
authors = ["Jacob Mischka <jacob@mischka.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.0.5"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
